# disco-ii-cortex-m7-scheduler

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
fsimx8mp-m7-sdk/: .gitignore  CMakeLists.txt  History-F+S-FreeRTOS.txt  LA_OPT_NXP_Software_License RTAudio.txt  MIMX8ML8xxxLZ_manifest_v3_8.xml  SW-Content-Register.txt  clean_all.cmake  prepare.sh
fsimx8mp-m7-sdk/CMSIS/Driver/Include/: CMSIS_Driver_Include_Common_MIMX8MM6.cmake  CMSIS_Driver_Include_I2C_MIMX8MM6.cmake  CMSIS_Driver_Include_SPI_MIMX8MM6.cmake  CMSIS_Driver_Include_USART_MIMX8MM6.cmake
fsimx8mp-m7-sdk/CMSIS/Include/: CMSIS_Include_common_MIMX8MM6.cmake  CMSIS_Include_core_cm4_MIMX8MM6.cmake  CMSIS_Include_dsp_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/codec/: driver_codec_MIMX8ML8.cmake  driver_codec_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/codec/ak4497/: driver_ak4497_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/codec/i2c/: component_codec_i2c_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/codec/port/: component_codec_ak4497_adapter_MIMX8MM6.cmake  component_codec_wm8524_adapter_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/codec/port/wm8524/: component_wm8524_adapter_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/codec/sgtl5000/: fsl_sgtl5000.c
fsimx8mp-m7-sdk/components/codec/wm8524/: driver_wm8524_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/i2c/: component_ii2c_adapter_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/lists/: component_lists_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/serial_manager/: component_serial_manager_MIMX8ML8.cmake  component_serial_manager_MIMX8MM6.cmake  component_serial_manager_uart_MIMX8ML8.cmake  component_serial_manager_uart_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/srtm/: driver_srtm_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/srtm/port/: driver_srtm_freertos_MIMX8MM6.cmake
fsimx8mp-m7-sdk/components/srtm/services/: srtm_sai_sdma_adapter.c
fsimx8mp-m7-sdk/components/uart/: component_iuart_adapter_MIMX8MM6.cmake
fsimx8mp-m7-sdk/devices/MIMX8ML8/cmsis_drivers/: driver_cmsis_ecspi_MIMX8ML8.cmake  driver_cmsis_iuart_MIMX8ML8.cmake  fsl_i2c_cmsis.c  fsl_i2c_cmsis.h
fsimx8mp-m7-sdk/devices/MIMX8ML8/utilities/: utilities_misc_utilities_MIMX8ML8.cmake
fsimx8mp-m7-sdk/devices/MIMX8ML8/utilities/debug_console_lite/: utility_debug_console_lite_MIMX8ML8.cmake
fsimx8mp-m7-sdk/middleware/issdk/algorithms/pedometer/include/: pedometer.h
fsimx8mp-m7-sdk/middleware/issdk/algorithms/pedometer/source/: pedometer.c
fsimx8mp-m7-sdk/middleware/issdk/sensors/: fxas21002.h  fxlc95000.h  fxls8471q.h  fxos8700.h  fxpq3115.h  mag3110.h  mma845x.h  mma8491q.h  mma865x.h  mma9553.h  mpl3115.h
fsimx8mp-m7-sdk/middleware/mbedtls/: ChangeLogKSDK.txt
fsimx8mp-m7-sdk/middleware/mbedtls/port/ksdk/: ksdk_mbedtls.c  ksdk_mbedtls_config.h
fsimx8mp-m7-sdk/middleware/mmcau/: ChangeLogKSDK.txt  README.txt
fsimx8mp-m7-sdk/middleware/multicore/: ChangeLogKSDK.txt  middleware_multicore_rpmsg_lite_MIMX8ML8.cmake  middleware_multicore_rpmsg_lite_MIMX8MM6.cmake  middleware_multicore_rpmsg_lite_imx8mm_m4_freertos_MIMX8MM6.cmake  middleware_multicore_rpmsg_lite_imx8mp_m7_freertos_MIMX8ML8.cmake  readme.txt
fsimx8mp-m7-sdk/middleware/multicore/rpmsg_lite/lib/rpmsg_lite/porting/platform/imx6sx_m4/: rpmsg_platform.c
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/: iec60730b.h  iec60730b_types.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/common_test/aio/: iec60730b_aio.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/common_test/clock/: iec60730b_clock.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/common_test/dio/: iec60730b_dio.h  iec60730b_dio_ext.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/common_test/tsi/: iec60730b_tsi.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/common_test/wdog/: iec60730b_wdog.c  iec60730b_wdog.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/compiler/: asm_mac_common.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/core_test/cm4_cm7/flash/: iec60730b_cm4_cm7_flash.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/core_test/cm4_cm7/programCounter/: iec60730b_cm4_cm7_pc.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/core_test/cm4_cm7/ram/: iec60730b_cm4_cm7_ram.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/core_test/cm4_cm7/register/: iec60730b_cm4_cm7_reg.h
fsimx8mp-m7-sdk/middleware/safety_iec60730b/safety/v4_1/core_test/cm4_cm7/stack/: iec60730b_cm4_cm7_stack.h
fsimx8mp-m7-sdk/rtos/freertos/: middleware_freertos-kernel_MIMX8ML8.cmake  middleware_freertos-kernel_MIMX8MM6.cmake  middleware_freertos-kernel_extension_MIMX8ML8.cmake  middleware_freertos-kernel_extension_MIMX8MM6.cmake  middleware_freertos-kernel_heap_4_MIMX8ML8.cmake  middleware_freertos-kernel_heap_4_MIMX8MM6.cmake
fsimx8mp-m7-sdk/rtos/freertos/doc/lib/: https.txt  pkcs11.txt  platform.txt  posix.txt
fsimx8mp-m7-sdk/rtos/freertos/freertos_kernel/: croutine.c
fsimx8mp-m7-sdk/rtos/freertos/freertos_kernel/include/: event_groups.h  list.h  queue.h
fsimx8mp-m7-sdk/tools/cmake_toolchain_files/: armgcc.cmake
fsimx8mp-m7-sdk/tools/imgutil/: install7ulp.sh  readme.txt
fsimx8mp-m7-sdk/tools/imgutil/evkmcimx7ulp/: mkimg.sh
include/: a53_comm_service.h  board.h  can_iface.h  clock_config.h  csp_hook_fsl_mx8mp_m7.h  endian_adapter.h  gnss.h  hooks.h  kiss_iface.h  lpm.h  network_config.h  param_config.h  sys_comm_service.h  tinygps.h  tmu.h  vmem_config.h  wake_a53_service.h
lib/: csp_endian.patch
patch/: CMakeLists.txt
src/: FreeRTOSConfig.h  a53_comm_service.c  board.c  board.h  can_iface.c  clock_config.c  csp_hook_fsl_mx8mp_m7.c  fsl_iomuxc.h  gnss.c  hooks.c  kiss_iface.c  lpm.c  main.c  network_config.c  param_config.c  pin_mux.c  pin_mux.h  serial.c  si_lock.c  sys_comm_service.c  tinygps.c  tmu.c  vmem_config.c
src/armgcc/: CMakeLists.txt  MIMX8ML8xxxxx_cm7_ram.ld  build-service-start.sh  build.sh  flags.cmake
